float_eq/tests/derive_tests/float_eq_all/float_eq_all_enum.stderr
error: FloatEqAll may only be derived for structs.
 --> $DIR/float_eq_all_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^

error: FloatEq may only be derived for structs.
 --> $DIR/float_eq_all_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^

error: FloatEqUlpsTol may only be derived for structs.
 --> $DIR/float_eq_all_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^
